# program_gp_general

./: CMakeClean  CMakeLists.txt  Pull_code  Push_code  README.md
tests/01.conventional_1D_teach_val/: script
tests/02.conventional_1D_teach_der/: script
tests/03.conventional_1D_teach_val_der/: script
tests/04.conventional_2D_teach_val/: script
tests/05.conventional_2D_teach_der/: script
tests/06.sparse_file_2D_teach_val/: script
tests/07.sparse_grid_2D_teach_val/: script
tests/08.sparse_cluster_2D_teach_val/: script
tests/09.sparse_grid_2D_teach_val_user_kernel/: script
tests/10.conventional_1D_optimize_hyper/: script
tests/11.sparse_grid_2D_find_minima/: script
tests/12.sparse_grid_2D_write_and_read_gp_file/: script
